test/TestPhases/typechecker/valid/externConst.blc
@[EntryPoint]
activity E ()()
    @[CConst(binding="", header="")]
    extern const foo: int32
    await true
end