test/TestPhases/typechecker/invalid/SingletonCallInCond2.blc
@[CFunction(binding="",header="")]
extern singleton function g() returns bool

function f() returns bool
    return g()
end

activity B()
    await f()
end

@[EntryPoint]
activity A()
    if f() then
    end
    await true
end